--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "zustand": "^4.3.7"
+    "react-router-dom": "^6.13.0",
+    "zustand": "^4.3.8"
   },
+  "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.38.0",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -27,10 +27,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.7",
-    "sass": "^1.61.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1"
-  },
-  "license": "ISC"
+    "prettier": "^2.8.8",
+    "sass": "^1.63.4",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
+  }
 }
