--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "devDependencies": "npm i @types/react @types/react-dom @typescript-eslint/eslint-plugin @typescript-eslint/parser @vitejs/plugin-react eslint eslint-config-prettier eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-prettier eslint-plugin-react eslint-plugin-react-hooks eslint-plugin-simple-import-sort prettier sass typescript vite -D",
+    "dependencies": "npm i react react-dom react-router-dom zustand",
+    "update": "npm run devDependencies && npm run dependencies"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -33,3 +36,4 @@
     "vite": "^4.3.9"
   }
 }
+
