--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "vite-react-ts-eslint-prettier_template",
-  "version": "0.1",
+  "name": "vite_template",
+  "version": "0.2.1",
   "license": "ISC",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
+    "dev": "rm -rf ./dev-dist && vite",
+    "build": "rm -rf ./dist && tsc && vite build",
+    "serve": "vite preview",
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/icons/favicon.svg"
   },
   "dependencies": {
     "@types/node": "^20.9.0",
     "mobx": "^6.10.2",
+    "mobx-persist-store": "^1.1.3",
     "mobx-react": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +23,7 @@
     "@types/sass": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "@vite-pwa/assets-generator": "^0.0.10",
     "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
@@ -33,6 +36,7 @@
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vite-plugin-pwa": "^0.16.7"
   }
 }
