--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.2.1",
   "license": "ISC",
   "scripts": {
-    "dev": "rm -rf ./dev-dist && vite",
-    "build": "rm -rf ./dist && tsc && vite build",
-    "serve": "vite preview",
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal public/icons/favicon.svg"
+    "dev": "vite",
+    "build": "rm -rf ./dist && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^20.9.0",
     "mobx": "^6.10.2",
     "mobx-persist-store": "^1.1.3",
     "mobx-react": "^9.0.2",
@@ -18,12 +16,12 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/sass": "^1.45.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
-    "@vite-pwa/assets-generator": "^0.0.10",
     "@vitejs/plugin-react": "^4.1.1",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
@@ -36,7 +34,6 @@
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vite-plugin-pwa": "^0.16.7"
+    "vite": "^4.5.0"
   }
 }
